bin/tests/errors_parser/parser/parser_err_invalid_intrinsic.swg
#global fileprivate

var a = @toto(6) // swc-expected-error {{parser_err_invalid_intrinsic}}
